--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
 									</ul>
 								</article>
 								<article>
+									<header>
+									
+										<h2><a href="https://github.com/WhoisJace/Analyzing_Students_Mental_Health">Analyzing Students Mental Health<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/WhoisJace/Analyzing_Students_Mental_Health" class="image fit"><img src="images/mentalhealth.jpg" alt="" /></a>
+									<p></p>
+									<ul class="actions special">
+										<li><a href="https://github.com/WhoisJace/Analyzing_Students_Mental_Health" class="button">View</a></li>
+									</ul>
 
 						<!-- Footer -->
 
